# hr4c_common_pkgs

hr4c_msgs/: CMakeLists.txt  README.md  package.xml
hr4c_msgs/srv/: GetForceMoment.srv  GetInt8Array.srv  GetMotorStatus.srv  GetPose.srv  SetFloat64.srv  SetForceMoment.srv  SetInt8.srv  SetInt8Array.srv  SetJointTrajectory.srv  SetPose.srv
