<?xml version="1.0"?>
<package format="2">
  <name>hr4c_msgs</name>
  <version>0.0.0</version>
  <description>message/service definitions for hr4c robots</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

</package>
